--- a/_includes/pagination-home.html
+++ b/_includes/pagination-home.html
@@ -7,7 +7,7 @@
     {% endif %}
     <span class="page_number ">{{ site.translations.pagination.page | default: "Page" }} {{ paginator.page }} {{ site.translations.pagination.of | default: "of" }} {{ paginator.total_pages }}</span>
     {% if paginator.next_page %}
-        <a href="{{site.baseurl}}/{{ paginator.next_page_path }}" class="next" onclick="ga('send', 'event', 'pagination', 'click', 'page next')">
+        <a href="{{ paginator.next_page_path }}" class="next" onclick="ga('send', 'event', 'pagination', 'click', 'page next')">
             <svg><use xlink:href="#icon-arrow-right"></use></svg>
         </a>
     {% endif %}
