--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: main
     {% endif %} -->
 
     {% assign firstpost = posts.first %}
-    <section class="hero" style="background-image: url({{ firstpost.image }})">
+    <section class="hero" style="background-image: url(https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme5_wmutla.jpg)">
         <!-- <div class="pixels"></div> -->
       
     </section>
