--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,31 +12,10 @@ layout: compress
     <section class="content">
         {{ content }}
     </section>
-    <iframe src="https://www.jijitechnologies.com/footer.aspx" scrolling="no" width=100% height=460px
+    <iframe src="https://www.jijitechnologies.com/footer.aspx" scrolling="no" width=100% height=460px id="footeriframe"
         style="border: none;"> </iframe>
-    <script>
 
-        if (matchMedia) {
-            const mq = window.matchMedia("(max-width: 600px)");
-            mq.addListener(WidthChange);
-            WidthChange(mq);
-        }
-
-        // media query change
-        function WidthChange(mq) {
-            var iframe = document.getElementById("footeriframe")
-            if (mq.matches) {
-                console.log("Mq", mq)
-
-                var scrollHeight = iframe.scrollHeight;
-                var clientHeight = iframe.clientHeight;
-                iframe.height = scrollHeight + clientHeight + "px";
-            } else {
-                iframe.height = 460 + "px";
-            }
-
-        }
-    </script>
+    <script src="{{ '/assets/js/footerresize.js' | prepend: site.baseurl }}"></script>
     <!-- {% include footer.html %} -->
     <script>
         if (window.netlifyIdentity) {
