--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -65,11 +65,15 @@
                 {% endif %}
                 {% endfor %}
             </div>
-            
+
         </main>
 
     </section>
-    {% include footer.html %}
+    <iframe src="https://www.jijitechnologies.com/footer.aspx" scrolling="no" width=100% height=460px id="footeriframe"
+        style="border: none;"> </iframe>
+
+    <script src="{{ '/assets/js/footerresize.js' | prepend: site.baseurl }}"></script>
+    <!-- {% include footer.html %} -->
 </body>
 
 </html>
