--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,9 +1,12 @@
 <ul>
+  <li>
+    <a href="{{ site.baseurl }}/">Home</a>
+  </li>
   {% for item in site.menu %}
-    {% if item.title and item.url %}
-      <li>
-        <a href="{{ site.url }}{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
-      </li>
-    {% endif %}
+  {% if item.title and item.url %}
+  <li>
+    <a href="{{ item.url }}">{{ item.title }}</a>
+  </li>
+  {% endif %}
   {% endfor %}
 </ul>
