All files final

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <h1 class="logo">
         <a href="{{ site.baseurl }}/">
             {% if site.use_logo %}
-                {% include logo.html %}
+               <img src="{{site.logo}}" alt="Logo">
             {% else %}
                 {{ site.name }} 
             {% endif %}
