--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,6 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{ site.language }}" class="no-js">
 {% include head.html %}
-
 <body class="main-page has-push-menu">
     {% include svg-icons.html %}
     {% include header.html %}
@@ -14,10 +13,9 @@ layout: compress
     </section>
     <iframe src="https://www.jijitechnologies.com/footer.aspx" scrolling="no" width=100% height=460px id="footeriframe"
         style="border: none;"> </iframe>
+    <script src="{{ '/assets/js/blog.js' | prepend: site.baseurl }}"></script>
+    {% include footer-scripts.html %}
 
-    <script src="{{ '/assets/js/footerresize.js' | prepend: site.baseurl }}"></script>
-    <!-- {% include footer.html %} -->
-   
 </body>
 
 </html>
