--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@ layout: compress
             <section class="content">
                 {{ content }}
             </section>
-        {% include footer.html %}
+            <iframe src="https://www.jijitechnologies.com/footer.aspx" scrolling="no" width=100% height=460px id="footeriframe"
+            style="border: none;"> </iframe>
+        <script src="{{ '/assets/js/blog.js' | prepend: site.baseurl }}"></script>
     </body>
 </html>
 
