--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,9 @@
 .comments {
   @include center(rem(800px));
   padding: 0 rem(20px);
-  
+  @include media(">=sm") {
+    max-width: rem(1100px);
+  }
   h3 {
     margin: 0 0 rem(30px);
     font-size: rem(30px);
