--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -80,10 +80,10 @@
 
       .text {
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
         padding: rem(15px) 0;
+        display: flex;
+        flex: 0 0 100%;
+        justify-content: center;
       }
     }
   }
